Closed Bug 332632 Opened 18 years ago Closed 18 years ago

String assertion in libmime when reading mail from mail.app

Categories

(Thunderbird :: General, defect)

x86
Windows XP
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird2.0

People

(Reporter: mscott, Assigned: mscott)

References

Details

(Keywords: fixed1.8.1)

Attachments

(1 file)

When I read format=flowed e-mail from mail.app, I get assertions in libmime about nsDepedentString attempting to wrap a non null-terminated string.
nsDependentCSubstring handles non null-terminated strings. nsDependentCString does not. 

Note: this bug wasn't catastrophic (i.e. we weren't reading uninitialized memory) because our string really was null terminated right after the trailing format=flowed space character at the end of the line. But our length parameter always ends at the space and not the next byte (which is the null terminator).
Attachment #217095 - Flags: superreview?(bienvenu)
Attachment #217095 - Flags: superreview?(bienvenu) → superreview+
Status: NEW → RESOLVED
Closed: 18 years ago
Keywords: fixed1.8.1
Resolution: --- → FIXED
Blocks: 318886
BTW: In Bug 318886 i narrowed down the problem to delsp=yes. But maybe there was more than one possibility to trigger this assertion.
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: