Bug #332632 --> fix string assertion in libmime because we were pasing a non null terminated string into nsDependentCString. sr=bienvenu